--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,4 +6,8 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "flask>=3.1.2",
+    "matplotlib>=3.10.7",
+    "requests>=2.32.5",
+    "scikit-learn>=1.7.2",
+    "pandas>=2.3.3",
 ]
